# mycelium

./: .gitignore  EXAMPLES.md  README.md  REFERENCE.md  SKILL.md  pyproject.toml  skills-lock.json
docs/: raw-guide.md  web-fetch.md
evals/: evals.json
examples/: test-read.py
examples/sample-wiki/wiki/: index.md
examples/sample-wiki/wiki/concepts/: attention-mechanism.md
examples/sample-wiki/wiki/sources/: article-transformer-attention.md
references/: obsidian-guide.md  scripts-reference.md
scripts/: auto_ingest.py  canvas.py  daily.py  diff-raw.py  diff-raw.sh  excalidraw.py  export.py  fetch-web.py  fetch.py  gaps.py  git-auto.py  git-auto.sh  graph.py  index.py  ingest-raw.py  ingest.py  ingest.sh  init.py  init.sh  kanban.py  lint.py  mark-ingested.sh  merge-concepts.py  query.py  raw.py  raw.sh  read-source.py  read-source.sh  resolve.py  search.py  semantic.py  source-score.py  stats.py  timeline.py  utils.py  video.py  watch.py
